--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
+config==0.3.9
+dj-database-url==0.5.0
 Django==1.11
+django-bootstrap3==10.0.1
+django-heroku==0.3.1
+gunicorn==19.9.0
+Pillow==5.2.0
 pkg-resources==0.0.0
+psycopg2==2.8.3
+python-decouple==3.1
 pytz==2019.2
+whitenoise==4.0
